--- a/PrintPdf/PrintPdf.csproj
+++ b/PrintPdf/PrintPdf.csproj
@@ -11,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
     <Folder Include="wwwroot\Rotativa\" />
   </ItemGroup>
 
